[M2][E02][T0206] Policy snapshot retrieval API
